# bergcms

./: .editorconfig  .eslintrc.json  .gitignore  .gitmodules  .travis.yml  CHANGES.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  Makefile  README.md  apiary.apib  build_documentation.sh  build_git_clone_on_remote_buildhost.sh  build_www.sh  build_zip_on_remote_buildhost.sh  deploy.sh  deploy_ssh.sh  install_locally.sh  make_zip.sh  package.json  remotehosts-example.cfg  run_all_tests_locally.sh  update_and_build_submodules.sh  wdio.conf.js
LICENSES/: MIT-LICENSE.txt
api-test/: dredd-hooks.js  dredd.yml
doc/etc_apache2.2/sites-available/: 000-default.conf  aachen.local.conf  bergcms.local.conf
doc/etc_apache2.4/sites-available/: 000-default.conf
doc/etc_apache2/sites-available/: 000-default.conf  aachen.local.conf
doc/etc_proftpd/: modules.conf  proftpd.conf
doc/redakteur/: redakteurin.tex
e2e-test/: README.txt
e2e-test/spec/gen1/: act-issue-empty-db.js  act-issue.js  hilfe.js  maker.js
images/berg-v1/: berg.xcf  berggreen.xcf
latex/class_berg/: berg.dtx  berg.ins  update_cls_pdf.sh
latex/class_berg/examples/: singlepage.tex  withpicturecredits.tex
latex/ctan/: README.txt
src/: .gitignore  CMakeLists.txt  Hints.txt  boost_config.cmake  crosscompile_config.cmake  directory_layout.cmake  install_package.cmake  project_berg_coding_style.xml  project_berg_dictionary.xml  shared_config.cmake
src/exp/: CMakeLists.txt  echo.cpp  example.tpl  exptemplate.cpp  hello_world.cpp  show_rpath.cpp  simple_regex.cpp
src/lib/: Archive.cpp  Archive.h  Article.cpp  Article.h  BoostFlags.h  CMakeLists.txt  Common.cpp  Common.h  DirectoryLayout.cpp  DirectoryLayout.h  FileStorage.cpp  FileStorage.h  Filter.h  Helper.cpp  Helper.h  IFilter.h  ProcessStep.cpp  ProcessStep.h  RestArticle.cpp  RestArticle.h
src/srv/: CMakeLists.txt
src/srv/archive/: CMakeLists.txt  archive.cpp
src/srv/berg/: CMakeLists.txt  berg.cpp
src/srv/bgrest/: CMakeLists.txt  bgrest.cpp
src/srv/maker/: CMakeLists.txt  maker.cpp
src/test/: CMakeLists.txt  TestArticle.cpp  TestArticleJson.cpp  TestDirectoryLayout.cpp  TestHelper.cpp  TestMain.cpp  TestRESTfulApi.cpp  TestShared.h  TestStorage.cpp  TestTexGenerationUsingPex.cpp
src/test/expected/: Readme.txt  callingpex.tex  callingpexsomearticles.tex  empty_db.json  get_article_changed_title.json  post_article_with_title1.json  post_article_with_title2.json  post_empty_article.json  post_empty_article1.json  post_empty_article2.json  put_article_changed_title.json  single_article.json  some_articles.json  two_articles.json  two_articles_id1.json  two_articles_id42.json
src/test/input/: api_examples.csv  put_article_changed_title.json  simpleperlscript.pl  single_article.csv  some_articles.csv  two_articles.csv
src/test/input/archive/: gi003.csv  gi1.csv  gi1001.csv  gi1002.csv  gi2.csv
src/test/output/: .gitignore  Readme.txt
src/tools/: CMakeLists.txt
src/tools/extract/: CMakeLists.txt  extract.cpp
test/: 001-mocha-installation.js  hilfe.js  maker.js  mocha.opts
testsuite/: ts_actual_issue.html
testsuite-webdriver-js/: example.js  maker-result.js
testsuite-webdriver-py/: test_web.py
testsuite/actual_issue/: change_todo.html  edit_configuration.html  open_configuration.html  open_main_page.html
tools/: .gitignore  ics2bergcms.py
www/: .project
www/cgi-bin/brg/: .gitignore  berg.pl  bgcrud.pl  bgul.pl  pex.pl  testcase.pl  xsc.pl  xsc.sh
www/cgi-bin/brg/archive_content/: README.txt
www/cgi-bin/brg/br/: .gitignore  README.txt  feginfo.csv
www/cgi-bin/brg/br/bilder/: README.txt
www/cgi-bin/brg/br/data/: uni-0.def  uni-1.def  uni-100.def  uni-101.def  uni-102.def  uni-103.def  uni-104.def  uni-105.def  uni-106.def  uni-107.def  uni-108.def  uni-109.def  uni-110.def  uni-111.def  uni-112.def  uni-113.def  uni-114.def  uni-115.def  uni-116.def  uni-117.def  uni-118.def  uni-119.def  uni-12.def  uni-120.def  uni-121.def  uni-122.def  uni-123.def  uni-124.def  uni-125.def  uni-126.def  uni-127.def  uni-128.def  uni-129.def  uni-130.def  uni-131.def  uni-132.def  uni-133.def  uni-134.def  uni-135.def  uni-136.def  (+137 more)
www/cgi-bin/brg/gi_backup/: README.txt
www/cgi-bin/brg/log/: README.txt
www/cgi-bin/brg/perl5/: README.txt
www/cgi-bin/brg/perl5/Algorithm/: Diff.pm
www/cgi-bin/brg/t/: .gitignore  README.txt  run_tests.sh  test_pex.pl  test_pex_columns.pl
www/cgi-bin/brg/t/expected/: single_article.tex  some_articles.tex
www/cgi-bin/brg/template/: berg_archive.tpl  berg_archive_all_articles.tpl  berg_archive_single_article.tpl  berg_error_page.tpl  berg_main.tpl  shared_header_and_footer.tpl
www/cgi-bin/brg/tidx/: README.txt
www/htdocs/: index.html
www/htdocs/brg/: .htaccess  hilfe.html
www/htdocs/brg/bgico/: ORIGIN_AND_LICENSES.txt
www/htdocs/brg/css/: berg.css  bgcrud.css
www/htdocs/brg/css/yaml/core/: base.css  iehacks.css
www/htdocs/brg/css/yaml/navigation/: vlist.css
www/htdocs/brg/css/yaml/print/: print.css
www/htdocs/brg/css/yaml/screen/: screen-FULLPAGE-layout.css  screen-PAGE-layout.css
www/htdocs/brg/js/: berg.js
www/htdocs/dlb/: .gitignore  README.txt
www/htdocs/ul/: README.txt
